update form added

--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,22 @@ input {
   justify-content: center;
 }
 
+.error-message {
+  color: red;
+  font-style: italic;
+}
+
+.update-btn{
+  .button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+}
