--- a/src/NavigationPage.css
+++ b/src/NavigationPage.css
@@ -22,7 +22,7 @@
     margin-right: 70px;
     border-radius: 5px;
     color: #fff;
-    background-color: #007bff;
+    background-color:red;
   }
   
   .link:hover {
