--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@
   }
 }
 
-/* Styles for centering the form and label/input styling */
 .form-container {
   display: flex;
   flex-direction: column;
@@ -68,19 +67,16 @@ input {
   border-radius: 5px;
 }
 
-
-
 .header {
-  background-color: #007bff; /* Change the background color */
-  color: #fff; /* Change the text color to white */
+  background-color: #007bff;
+  color: #fff;
   text-align: center;
   padding: 20px;
-  font-size: 32px; /* Increase the font size */
-  text-transform: uppercase; /* Convert text to uppercase */
-  letter-spacing: 2px; /* Add letter spacing */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+  font-size: 32px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-
 
 .input-group {
   display: flex;
@@ -88,7 +84,6 @@ input {
   align-items: center;
   margin-bottom: 20px;
 }
-
 
 .btn {
   padding: 12px 24px;
@@ -107,17 +102,15 @@ input {
   color: #fff;
 }
 
-
 .stylish-label {
   font-size: 24px;
   font-weight: bold;
-  color: #007bff; /* Stylish label color */
-  text-transform: uppercase; /* Convert text to uppercase */
+  color: #007bff;
+  text-transform: uppercase;
   margin-bottom: 10px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle text shadow */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Style the table */
 .styled-table {
   width: 100%;
   border-collapse: collapse;
@@ -126,7 +119,6 @@ input {
   margin-left: 388px;
 }
 
-/* Style the table header */
 .styled-table th {
   background-color: #333;
   color: white;
@@ -135,14 +127,12 @@ input {
   text-align: left;
 }
 
-/* Style the table rows */
 .styled-table td {
   padding: 10px;
   border: 1px solid #e0e0e0;
   background-color: #fff;
   text-align: left;
 }
-
 
 .table-container {
   width: 70%;
@@ -155,11 +145,11 @@ input {
   font-style: italic;
 }
 
-.update-btn{
+.update-btn {
   .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
     text-align: center;
     font-size: 16px;
